--- a/static/private/404.html
+++ b/static/private/404.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Fiber Corap-web</title>
-		<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.min.js "></script>
-        <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css " rel="stylesheet"></link>
-
-	</head>
-    <body>
-      <div class="container">
-        <div class="text-center">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="error-template">
-                  <h1>Oops!</h1>
-                  <h2>404 Not Found</h2>
-                  <p>
-                    Sorry, an error has occured, Requested page not found!
-                  </p>
-                </div>
-              </div>
-            </div>
-        </div>
+<html>
+  <head>
+    <title>404: Page not found</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+3&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="/css/main.css" />
+  </head>
+  <main
+    class="grid min-h-full place-items-center bg-white px-6 py-24 sm:py-32 lg:px-8">
+    <div class="text-center">
+      <p class="font-semibold text-2xl text-gray-900">404</p>
+      <h1
+        class="mt-4 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">
+        Page not found
+      </h1>
+      <p class="mt-6 text-base leading-7 text-gray-600">
+        Sorry, we couldn't find the page you're looking for.
+      </p>
+      <div class="mt-10 flex items-center justify-center gap-x-6">
+        <a href="/" class="text-sm font-semibold text-gray-900"
+          ><span aria-hidden="true">&larr; </span>Go back home
+        </a>
       </div>
-    </body>
+    </div>
+  </main>
 </html>
