--- a/static/private/404.html
+++ b/static/private/404.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>404: Page not found</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+3&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/tlw.css" />
   </head>
   <main
     class="grid min-h-full place-items-center bg-white px-6 py-24 sm:py-32 lg:px-8">
